--- a/index.html
+++ b/index.html
@@ -121,23 +121,19 @@
 			<section class="promo">
 				<h2 class="visually-hidden">Промо-предложения</h2>
 				<ul class="promo-list">
-					<li class="promo-item promo-item-raspberry">
-						<div class="promo-item-wrapper">
-							<p class="promo-title">Малинка даром!</p>
-							<p class="promo-terms">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-							<p class="promo-order">
-								<a href="#" class="button">Хочу варенье!</a>
-							</p>
-						</div>
+					<li class="promo-item promo-item-raspberry">						
+						<p class="promo-title">Малинка даром!</p>
+						<p class="promo-terms">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+						<p class="promo-order">
+							<a href="#" class="button">Хочу варенье!</a>
+						</p>						
 					</li>
-					<li class="promo-item promo-item-chocolate">
-						<div class="promo-item-wrapper">
-							<p class="promo-title">Шоколадки даром!</p>
-							<p class="promo-terms">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-							<p class="promo-order">
-								<a href="#" class="button">Хочу шоколадки!</a>
-							</p>
-						</div>
+					<li class="promo-item promo-item-chocolate">						
+						<p class="promo-title">Шоколадки даром!</p>
+						<p class="promo-terms">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+						<p class="promo-order">
+							<a href="#" class="button">Хочу шоколадки!</a>
+						</p>						
 					</li>
 				</ul>				
 			</section>
@@ -146,7 +142,7 @@
 				<h2 class="visually-hidden">Хиты продаж</h2>
 				<ul class="catalog-list">
 					<li class="catalog-item">
-						<figure class="catalog-image catalog-offer">
+						<figure class="catalog-image catalog-offer hit">
 							<a href="#">
 								<img src="img/product-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 							</a>							
@@ -160,7 +156,7 @@
 						</p>
 					</li>
 					<li class="catalog-item">
-						<figure class="catalog-image catalog-offer">
+						<figure class="catalog-image catalog-offer hit">
 							<a href="#">
 								<img src="img/product-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
 							</a>							
@@ -174,7 +170,7 @@
 						</p>
 					</li>
 					<li class="catalog-item">
-						<figure class="catalog-image catalog-offer">
+						<figure class="catalog-image catalog-offer hit">
 							<a href="#">
 								<img src="img/product-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 							</a>							
@@ -188,7 +184,7 @@
 						</p>
 					</li>
 					<li class="catalog-item">
-						<figure class="catalog-image catalog-offer">
+						<figure class="catalog-image catalog-offer hit">
 							<a href="#">
 								<img src="img/product-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
 							</a>							
@@ -330,7 +326,7 @@
 			</div>
 
 			<div class="site-developer">
-				<img src="img/logo.svg" width="108" height="39" alt="Логотип разработчика сайта">
+				<img src="img/logo-htmlacademy-small.svg" width="108" height="39" alt="Логотип разработчика сайта">
 				<p>Сделано в <a href="https://htmlacademy.ru/">HTML Academy</a> © 2017</p>
 			</div>
 		</div>
