--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 			</div>
 
 			<div class="site-developer">
-				<img src="img/logo-htmlacademy-small.svg" width="108" height="39" alt="Логотип разработчика сайта">
+				<img class="developer-logo" src="img/logo-htmlacademy-small.svg" width="108" height="39" alt="Логотип разработчика сайта">
 				<p>Сделано в <a href="https://htmlacademy.ru/">HTML Academy</a> © 2017</p>
 			</div>
 		</div>
