--- a/catalog.html
+++ b/catalog.html
@@ -145,13 +145,14 @@
 				<form method="get" action="#">
 					<div class="filter-item filter-item-sorting">
 						<label for="filter">Сортировка</label>
+						<!-- <div class="select-arrow"> -->
 							<select name="filter" id="filter">
 								<option value="popularity">по популярности</option>
 								<option value="cheap-first">сначала недорогие</option>
 								<option value="expensive-first">сначала дорогие</option>
 								<option value="fat-content">по жирности</option>
 							</select>
-							<div class="select-arrow"></div>				
+						<!-- </div>				 -->
 					</div>
 
 					<div class="filter-item-slider">
